scrolling bug on mobile fixed

--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ body{
     margin-top:20px;
     margin-right:3%;
     opacity:0.7;
-    background-color:red;
+    background-color:black;
 }
     
 #active-box-img{
